syntax = "proto3";

package errors;

import "errors/errors.proto";
option go_package = "./;errors";

enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  ParamsError = 0[(errors.message)="参数错误"];
  SystemError = 1[(errors.message)="系统错误"];
  DatabaseError = 2[(errors.message)="数据库错误"];
  TransformError = 3[(errors.message)="数据转换失败"];
  GetError = 4[(errors.message)="获取数据失败"];
  ListError = 5[(errors.message)="获取列表数据失败"];
  CreateError = 6[(errors.message)="创建数据失败"];
  ImportError = 7[(errors.message)="导入数据失败"];
  ExportError = 8[(errors.message)="导出数据失败"];
  UpdateError = 9[(errors.message)="更新数据失败"];
  DeleteError = 10[(errors.message)="删除数据失败"];
  GetTrashError = 11[(errors.message)="获取回收站数据失败"];
  ListTrashError = 12[(errors.message)="获取回收站列表数据失败"];
  DeleteTrashError = 13[(errors.message)="删除回收站数据失败"];
  RevertTrashError = 14[(errors.message)="还原回收站数据失败"];
  DepartmentPurviewError = 15[(errors.message)="无此部门权限"];
  RolePurviewError = 16[(errors.message)="无此角色权限"];
  UserPurviewError = 17[(errors.message)="无此用户权限"];
  MenuPurviewError = 18[(errors.message)="无此菜单权限"];
  EditSystemDataError = 19[(errors.message)="系统数据，不允许修改"];
  GenCaptchaError = 20[(errors.message)="生成验证码失败"];
  SendCaptchaError = 21[(errors.message)="发送验证码失败"];
  DeleteSystemDataError = 22[(errors.message)="系统数据，不允许删除"];
  VerifyCaptchaError = 23[(errors.message)="验证码错误"];
  PasswordError = 24[(errors.message)="密码错误"];
  PasswordExpireError = 25[(errors.message)="密码已过期"];
  RefreshTokenError = 26[(errors.code)=401,(errors.message)="刷新token失败"];
  UsernameFormatError = 27[(errors.message)="用户名格式错误"];
  UsernameNotExistError = 28[(errors.message)="用户不存在"];
  UserDisableError = 29[(errors.message)="用户已被禁用"];
  RoleDisableError = 30[(errors.message)="角色已被禁用"];
  GenTokenError = 31[(errors.message)="token生成失败"];
  ParseTokenError = 32[(errors.message)="token解析失败"];
  ForbiddenError = 33[(errors.code)=403,(errors.message)="无接口权限"];
  ResourceServerError = 34[(errors.message)="资源服务异常"];
}